# computerGraphics

./: .gitignore  README.md
doc/: 计算机图形学实验报告模板.docx
src/BasicFirgurebyFreeGlutOnLinux/: CMakeLists.txt  star.cpp
src/BasicFirgurebyFreeGlutOnWindows/: CMakeLists.txt  line.cpp  star.cpp
src/DiamondAndLinebyQt+glfwOnLinux/: CMakeLists.txt  Diamond_dynamic.cpp  mainwindow.cpp  mainwindow.h
src/DiamondandLinebyQt+glfwOnWindows/: CMakeLists.txt  ColorCube.cpp  ColorCube.h  Diamond_dynamic.h  Line.cpp  Line.h  PointMine.cpp  PointMine.h  PolygonMine.cpp  PolygonMine.h  PolygonMine_copy.cpp  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/DiamondbyQt+glfwOnLinux/: CMakeLists.txt  Diamond.cpp  Diamond.h  mainwindow.cpp  mainwindow.h
src/DiamondbyQt+glfwOnWindows/: CMakeLists.txt  Diamond.cpp  Line.cpp  Line.h  main.cpp  mainwindow.cpp  mainwindow.h
src/DiamondbyglfwOnWindows/: CMakeLists.txt  dynamic_diamond.cpp  static_diamond.cpp
src/QtSimplestTestOnWindows/: CMakeLists.txt
src/QttTestOnWindows/: CMakeLists.txt  mainwindow.cpp
src/glfwOnWindows/: CMakeLists.txt  README.md  ball.cpp  besaier.cpp  colorCube.cpp  cubeLight.cpp  cubemaps_skybox.cpp  lineCut.cpp  sixEdgeFigure.cpp
src/glfwOnWindows/res/: ball_lighting.fs  ball_lighting.vs
src/glfwOnWindows/utilClass/: Shader.cpp  camera.h  shader_m.h  stb_image.h
src/glfwOpengl/: CMakeLists.txt  main.cpp
src/pythonQtOpengl/: glutils.py  main.py
